data/derived/comb/progs/unify/prog4351.ml.out
Characters 77-79:
  sin(pi*eval e0)
      ^^
Error: This expression has type float but an expression was expected of type
         int
